--- a/gh-pg/index.html
+++ b/gh-pg/index.html
@@ -58,6 +58,14 @@ p {
     align-items: flex-start;
 }
 
+.tick {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5em;
+}
+
 textarea {
     width: 10vw;
     height: 70%;
@@ -65,12 +73,12 @@ textarea {
 
     </style>
 
-<link rel="preload" href="./re-rando-7779f863ce1f4d8_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="./re-rando-7779f863ce1f4d8.js"></head>
+<link rel="preload" href="./re-rando-c8a0cd7993af7844_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="./re-rando-c8a0cd7993af7844.js"></head>
 <body>
 
 
-<script type="module">import init from './re-rando-7779f863ce1f4d8.js';init('./re-rando-7779f863ce1f4d8_bg.wasm');</script><script>(function () {
+<script type="module">import init from './re-rando-c8a0cd7993af7844.js';init('./re-rando-c8a0cd7993af7844_bg.wasm');</script><script>(function () {
     var protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
     var url = protocol + '//' + window.location.host + '/_trunk/ws';
     var poll_interval = 5000;
