--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@ p {
     align-items: flex-start;
 }
 
+.tick {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5em;
+}
+
 textarea {
     width: 10vw;
     height: 70%;
